<resources>
    <string name="app_name">EvernoteClient</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>


    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message_notes">There was a problem loading notes, please try again!</string>
    <string name="error_message_note">There was a problem loading the note detail, please try again!</string>
    <string name="error_message_default">Oops! An error happened!</string>

    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample">Map</string>
    <string name="error_something_bad_happened">Something bad happened. Please try again.</string>

    <string name="logo_evernote_description">logo evernote</string>
    <string name="log_in">Log In</string>
    <string name="action_logout">Logout</string>
    <string name="action_order_alphabetically">Order alphabetically</string>
    <string name="action_order_date_creation">Order by creation date</string>
    <string name="action_order_date_update">Order by update date</string>
    <string name="action_save">Save</string>
    <string name="created_at">Created at:</string>
    <string name="updated_at">Updated at:</string>
    <string name="new_note_normal">New input text note</string>
    <string name="new_note_handwritten">New handwritten note</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="create_new_note">Create new note</string>
    <string name="add_title_dialog">Add note title</string>
    <string name="attach_image">Attach image</string>
    <string name="create">Create</string>
    <string name="new_note">New note</string>

    <string name="new_note_edit_color">Select color</string>
    <string name="new_note_edit_undo">Undo</string>
    <string name="new_note_edit_redo">Redo</string>
    <string name="new_note_edit_delete">Clean all</string>

    <string name="show_screenshot">Take Screenshot</string>
    <string name="signature_hint">First and last name</string>
    <string name="age_hint">Age</string>
    <string name="signature_label">Insert your signature here</string>
    <string name="cancel_all">Cancel all</string>
    <string name="delete_draw">Delete draw</string>
    <string name="github_hint">Show Git Repository</string>
    <string name="github_url">https://github.com/RiccardoMoro</string>
    <string name="error_opening_url">Error opening link</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="stroke_alpha">Stroke alpha</string>
    <string name="stroke_width">Stroke width</string>
    <string name="pick_color">Select Color</string>
    <string name="result_ocr">Result OCR:</string>
    <string name="storage_permission_title">Storage Permission</string>
    <string name="storage_permission_conten">Storage permission it\'s necessary to save the handwritten note</string>
    <string name="error_creating_note">Error creating the note</string>
    <string name="note_created_successfully">Create note success</string>
    <string name="content">Content:</string>
    <string name="error_retrieving_notes">There was a problem retrieving the notes</string>


</resources>
