<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_sort_alphabetically"
        android:title="@string/action_order_alphabetically"
        android:icon="@drawable/sort_alphabetically"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_sort_date_creation"
        android:title="@string/action_order_date_creation"
        android:icon="@drawable/sort_date_creation"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_sort_date_update"
        android:title="@string/action_order_date_update"
        android:icon="@drawable/sort_date_edit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>